# csharp-driver

./: .gitignore  Makefile
.github/: copilot-instructions.md
.github/workflows/: main.yml
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: error_conversion.rs  ffi.rs  lib.rs  logging.rs  metadata.rs  prepared_statement.rs  row_set.rs  session.rs  task.rs
rust/src/pre_serialized_values/: csharp_memory.rs  ffi.rs  mod.rs  pre_serialized_values.rs
src/: Cassandra.sln
src/Cassandra/: Cluster.cs  Host.cs  ISession.cs  Metadata.cs  PreparedStatement.cs  Session.cs
src/Cassandra.IntegrationTests/Core/: MetadataGetReplicasTests.cs  MetadataTests.cs  SerDeTests.cs  SessionTests.cs  ShutdownAsyncTests.cs  TestAddress.cs
src/Cassandra.IntegrationTests/TestBase/: QueryTools.cs
src/Cassandra/Exceptions/: AlreadyShutdownException.cs
src/Cassandra/RowPopulators/: RowSet.cs
src/Cassandra/RustBridge/: NativeLibrary.cs  RustBridge.cs
src/Cassandra/RustBridge/Serialization/: ISerializedValues.cs  SerializationHandler.cs  SerializedValues.cs
