[package]
name = "csharp_wrapper"
version = "0.0.0"
edition = "2024"

[dependencies]
scylla = { version = "1.4.1", git = "https://github.com/scylladb-zpp-2025-csharp-rs-driver/scylla-rust-driver.git", branch = "main", features = [
    "unstable-csharp-rs",
] }
scylla-cql = { git = "https://github.com/scylladb-zpp-2025-csharp-rs-driver/scylla-rust-driver.git", branch = "main", package = "scylla-cql" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2"
tracing = "0.1.41"
# This is just for development. In production, we will probably get rid of this dependency.
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[lib]
crate-type = ["cdylib", "lib"] # "lib" needed for doctests

[profile.dev]
# Setting `panic = "abort"` guarantees the process will terminate on
# panic instead of unwinding, avoiding undefined behavior across the FFI
# boundary and making the program's failure more deterministic.
panic = "abort"

[profile.release]
# Same for release builds: ensure no unwinding occurs across the FFI
# boundary when this library is used by managed code.
panic = "abort"

[dev-dependencies]
ntest = "0.9"
uuid = "1"

[lints.rust]
unsafe-op-in-unsafe-fn = "warn"
unnameable_types = "warn"
# unreachable_pub = "warn"
